@@ -118,6 +118,10 @@
             <version>4.0.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>nl.jqno.equalsverifier</groupId>
+            <artifactId>equalsverifier</artifactId>
+        </dependency>
 
     </dependencies>
 
@@ -170,6 +174,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>
+                        <!-- spotless:off -->
+                        --add-opens polly.infrastructure/it.mulders.polly.infra.votes=ALL-UNNAMED
+                        <!-- spotless:on -->
+                    </argLine>
                     <environmentVariables>
                         <!-- Necessary for PropertyFileConfigurationServiceTest -->
                         <POLLY_CONFIGURATION_FILE>${project.basedir}/src/test/resources/valid_configuration.properties</POLLY_CONFIGURATION_FILE>
